feat: Upgrade to Spring Boot 3.5.11 - initial commit.